# model-nano

./: .gitignore  .pipeline_state  README.md  config.py  pyproject.toml  requirements.txt  train.py  train.sh
cli/: __main__.py  context.py  interactive.py  oneshot.py
data/: collect_docs.py  collect_stackoverflow.py  generate_synthetic.py  prepare_dataset.py  prepare_sft.py
docs/: ARCHITECTURE.md  CHANGELOG.md  DATA_GUIDE.md  README.md  TRAINING_GUIDE.md
eval/: benchmark.py  metrics.py  test_cases.json
inference/: engine.py  export_onnx.py  generate.py
model/: __init__.py  attention.py  components.py  config.py  transformer.py
tokenizer/: train_tokenizer.py
training/: dataset.py  gpu_utils.py  train_pretrain.py  train_sft.py  utils.py
